bpo-44600: Fix line numbers for pattern matching cleanup code (GH-27346)